# EVOSKILL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  WHITEPAPER.md  build.gradle.kts  gradle.properties  gradlew  index.html  manifest.json  preview.html  pyproject.toml  settings.gradle.kts  skill.yaml  sw.js
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/banana/toolbox/: BananaToolboxApp.kt  MainActivity.kt
app/src/main/java/com/banana/toolbox/data/repository/: AppRepositoryImpl.kt  FileRepositoryImpl.kt
app/src/main/java/com/banana/toolbox/di/: RepositoryModule.kt
app/src/main/java/com/banana/toolbox/domain/model/: AppItem.kt  FileItem.kt
app/src/main/java/com/banana/toolbox/domain/repository/: AppRepository.kt  FileRepository.kt
app/src/main/java/com/banana/toolbox/domain/usecase/app/: AppUseCases.kt
app/src/main/java/com/banana/toolbox/domain/usecase/file/: FileUseCases.kt
app/src/main/java/com/banana/toolbox/domain/usecase/game/: GameAssistantUseCases.kt  GameBoosterUseCases.kt  GameLauncherUseCases.kt  GameMonitorUseCases.kt  GameRecorderUseCases.kt
app/src/main/java/com/banana/toolbox/domain/usecase/network/: NetworkUseCases.kt
app/src/main/java/com/banana/toolbox/domain/usecase/tools/: CleanerUseCases.kt  CryptoUseCases.kt  DeepInspectorUseCases.kt  FileConverterUseCases.kt  GeneratorUseCases.kt  ToolUseCases.kt
app/src/main/java/com/banana/toolbox/ui/navigation/: Navigation.kt  Screen.kt
app/src/main/java/com/banana/toolbox/ui/screens/appmanager/: AppManagerScreen.kt  AppManagerViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/filemanager/: FileManagerScreen.kt  FileManagerViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/filemanager/components/: FileDialogs.kt
app/src/main/java/com/banana/toolbox/ui/screens/game/: GameAssistantScreen.kt  GameAssistantViewModel.kt  GameBoosterScreen.kt  GameBoosterViewModel.kt  GameCenterScreen.kt  GameCenterViewModel.kt  GameLibraryScreen.kt  GameLibraryViewModel.kt  GameRecorderScreen.kt  GameRecorderViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/home/: HomeScreen.kt
app/src/main/java/com/banana/toolbox/ui/screens/network/: NetworkToolsScreen.kt  NetworkToolsViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/tools/: ToolViewModel.kt  UtilityToolsScreen.kt
app/src/main/java/com/banana/toolbox/ui/screens/tools/cleaner/: CleanerScreen.kt  CleanerViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/tools/converter/: FileConverterScreen.kt  FileConverterViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/tools/crypto/: CryptoScreen.kt  CryptoViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/tools/generator/: GeneratorScreen.kt  GeneratorViewModel.kt
app/src/main/java/com/banana/toolbox/ui/screens/tools/inspector/: DeepInspectorScreen.kt  DeepInspectorViewModel.kt
app/src/main/java/com/banana/toolbox/ui/theme/: Color.kt  Theme.kt  Typography.kt
app/src/main/java/com/banana/toolbox/util/: CompressionUtils.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
core-common/: build.gradle.kts
core-ui/: build.gradle.kts
docs/: ARCHITECTURE.md  BUILD.md  FEATURES.md  ROADMAP.md  UI_DESIGN.md
feature-appmanager/: build.gradle.kts
feature-filemanager/: build.gradle.kts
feature-network/: build.gradle.kts
feature-tools/: build.gradle.kts
js/: app.js  compiler.js  editor.js  packages.js
src/evoskill/: cli.py
src/evoskill/modules/: discovery_module.py  evolution_engine.py  evolution_memory.py  mission_controller.py  skill_bank.py  skill_incubator.py  speciation_evolution.py  textgrad_engine.py  textgrad_optimizer.py  trueskill_rater.py
styles/: main.css
