[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoskill"
version = "1.0.0"
description = "🧬 EVOSKILL - Autonomous AI Skill Evolution Framework"
description-long = """
EVOSKILL is the world's first open-source framework enabling Large Language Models
to achieve recursive self-improvement without weight updates. Built on SkillRL,
TextGrad, and TrueSkill research, EVOSKILL enables AI to autonomously discover,
validate, incubate, and evolve production-ready skills - no retraining required.

This is Darwinian evolution for AI.
"""
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EVOSKILL AI Research", email = "research@evoskill.ai"}
]
maintainers = [
    {name = "EVOSKILL Core Team"}
]
keywords = [
    "ai", "agi", "evolution", "self-improvement", "recursive",
    "skill-learning", "autonomous-agents", "llm", "trueskill",
    "textgrad", "darwinian", "speciation", "meta-learning",
    "skill-incubator", "agent-evolution", "skillrl",
    "skill-bank", "skill-library", "auto-evolution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

# ⭐ 核心依赖（必须安装）
dependencies = [
    # CLI 框架
    "click>=8.0.0",
    "rich>=13.7.0",

    # 网络请求
    "aiohttp>=3.9.0",

    # 进化算法
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # 系统监控
    "psutil>=5.9.0",

    # 图像处理
    "Pillow>=10.0.0",
]

[project.scripts]
evolution = "woclaw.skills.evolution.scripts.run:main"

# 云端 API 支持（可选）
dependencies-api = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

# 本地模型支持
dependencies-local = [
    # Ollama 无需额外依赖，使用 aiohttp
]

# 浏览器自动化
dependencies-browser = [
    "playwright>=1.40.0",
]

# 开发依赖
dependencies-dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# 完整依赖
dependencies-all = [
    *dependencies,
    *dependencies-api,
    *dependencies-browser,
]

[project.optional-dependencies]
api = dependencies-api
local = dependencies-local
browser = dependencies-browser
all = dependencies-all
dev = dependencies-dev
[project.scripts]
evoskill = "evoskill.cli:main"

[project.urls]
Homepage = "https://github.com/badhope/EVOSKILL"
Repository = "https://github.com/badhope/EVOSKILL.git"
Documentation = "https://github.com/badhope/EVOSKILL/wiki"
Bug Tracker = "https://github.com/badhope/EVOSKILL/issues"
Discussions = "https://github.com/badhope/EVOSKILL/discussions"
Changelog = "https://github.com/badhope/EVOSKILL/releases"
Research = "https://github.com/badhope/EVOSKILL/wiki/Research"
Paper = "https://github.com/badhope/EVOSKILL/blob/main/WHITEPAPER.md"

[tool.setuptools]
packages = ["woclaw", "woclaw.skills", "woclaw.skills.evolution", "woclaw.skills.evolution.modules"]
package-dir = {"" = "src"}
Documentation = "https://github.com/badhope/Woclaw#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["woclaw*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = false  # 允许未类型标注

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
